methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:12: error: not found: value seenBaggle
  if (seenBaggle()==true){
      ^MethodsReturning:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsReturning'
override def run() {
             ^